# camp44

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  debug_routes.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test.db  test_cofounder_workshop.py
.claude/: templates.json
.claude/rules/: auto-memory-on-correction.md  cicd-verification.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
camp44/: main.py  test.db
camp44/api/: deps.py  deps_async.py
camp44/api/v1/: oidc.py  passkey.py
camp44/core/: auth_tokens.py  config.py  errors.py  middleware.py  oauth.py  rate_limit.py  s3.py  security.py  tracing.py  webauthn.py
camp44/crud/: __init__.py  app.py  app_async.py  entity.py  entity_async.py  refresh_token.py  user.py  user_async.py
camp44/db/: initial_data.py  session.py
camp44/middleware/: feature_flags.py  tenant.py  tenant_oidc.py
camp44/models/: __init__.py  app.py  base.py  bulk.py  demo_booking.py  entity.py  metering.py  refresh_token.py  token.py  user.py
camp44/utils/: bcrypt_fix.py
camp44/workers/: metering_processor.py
db/: __init__.py  engine.py  secrets.py
docs/: Authentication.md  Progress.md
migrations/: env.py
migrations/versions/: 159f114fdece_merge_heads.py  3a1662f579ce_add_is_active_to_user.py  5a316bd07df3_add_stripe_ids_to_user_and_app_models.py  aa96c1c2e95b_add_password_reset_token_fields.py  b2e4f1a8c3d7_add_token_version_and_refresh_tokens.py  c1286bf0918c_add_app_model.py  cf642fe24f8b_initial_migration.py  d69d27a04493_add_entity_model.py  f5ff3b3c6d4e_enable_rls_and_tenant_policies.py
scripts/: test-db.sh
tests/: README.md  conftest.py
tests/api/v1/: test_apps.py  test_entities.py  test_login.py  test_metering.py  test_oidc.py  test_passkey.py
tests/db/: conftest.py  test_engine_pool.py
tests/oidc/: conftest.py  test_token_validation.py
tests/passkey/: conftest.py  test_attestation_cbor_decode.py
tests/pgtap/: tenant_isolation.sql
tests/rate_limit/: conftest.py  test_limiter_no_500_on_success.py  test_login_redirect.py  test_rate_limit.py
tests_backup/: conftest.py
tests_backup/api/v1/: test_apps.py  test_entities.py  test_entity_debug.py  test_entity_debug_path.py  test_entity_deep_debug.py  test_entity_dependency_fix.py  test_entity_diagnostic.py  test_entity_direct.py  test_entity_direct_access.py  test_entity_focused.py  (+15 more)
(+12 files in other folders)
