[project]
name = "camp44"
version = "0.1.0"
description = "A FastAPI service to mirror and replace Base44."
authors = [{ name = "Cascade" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # fastapi>=0.135 drops the `starlette<1.0` cap, allowing the starlette 1.x
    # security bump below (PYSEC-2026-161). starlette pinned explicitly so the
    # security floor is deterministic, not left to fastapi's lower bound.
    "fastapi>=0.135.0",
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",  # Pin to avoid passlib compatibility issue with newer bcrypt
    "python-multipart>=0.0.27",  # CVE-2026-40347, CVE-2026-42561
    "minio>=7.2.5",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "stripe>=12.2.0",
    "pika>=1.3.0",
    "boto3>=1.34.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "webauthn>=1.10.0",
    "authlib>=1.6.11",  # PYSEC-2026-25, CVE-2026-28802/27962/28490
    "slowapi>=0.1.9",
    "redis>=5.0.0",  # shared rate-limit storage for multi-worker deploys
    "cbor2>=5.9.0",  # WebAuthn/passkey attestation; floor clears PYSEC-2025-90,
                     # CVE-2026-26209. No upper cap: prod runs 6.x and the
                     # passkey registration path works on it.
]

[project.scripts]
alembic = "alembic.config:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camp44"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "C90", "N", "D"]
ignore = ["D100", "D104", "D105", "D107", "D203", "D212", "D415"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
ignore = ["tests_backup"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
